added stubs from previous runs

--- a/ComputerNetworks/Ex04/www/index.html
+++ b/ComputerNetworks/Ex04/www/index.html
@@ -23,7 +23,7 @@
             background-size: 100%;
         }
         .header{
-            padding-top: 2vh;
+            padding-top: 20vh;
         }
         .main-title{
             font-size: 5vh;
@@ -64,6 +64,15 @@
             font-size: 3vh;
             color: #DD4814;
         }
+        .previousCrawl{
+            height:30vh;
+        }
+        ul{
+            list-style-type: none;
+            overflow-x: hidden;
+            overflow-y: scroll;
+            height: 80%;
+        }
     </style>
 </head>
 <body>
@@ -88,6 +97,43 @@
             <br>
             <input type="submit" value="Start crawler">
         </form>
+        <br>
+        <fieldset class="previousCrawl">
+            <legend>Previously crawled</legend>
+
+                <ul>
+                    <li>
+                        Some thing
+                    </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li> <li>
+                    Some thing
+                </li>d
+                </ul>
+
+        </fieldset>
     </div>
 </div>
 <!--Load JQ-->
