--- a/ComputerNetworks/Ex04/www/index.html
+++ b/ComputerNetworks/Ex04/www/index.html
@@ -74,6 +74,22 @@
             overflow-y: scroll;
 
         }
+        /*Scrollbar*/
+        ::-webkit-scrollbar {
+            width: 12px;
+        }
+
+        ::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            border-radius: 10px;
+            background-color: rgba(250,250,250,0.2);
+        }
+
+        ::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+            background-color: rgba(250,250,250,0.8);
+        }
     </style>
 </head>
 <body>
