wasted too much time :\

--- a/ComputerNetworks/Ex04/www/index.html
+++ b/ComputerNetworks/Ex04/www/index.html
@@ -66,6 +66,7 @@
         }
         .previousCrawl{
             height:30vh;
+            width:30%;
         }
         ul{
             list-style-type: none;
@@ -115,39 +116,23 @@
             <input type="submit" value="Start crawler">
         </form>
         <br>
+        <a href="execResult.html">exec results</a>
+        <br>
         <fieldset class="previousCrawl">
             <legend>Previously crawled</legend>
 
             <ul>
                 <li>
-                    Some thing
+                    [domain] - [date crawl started] - [time crawl started]
                 </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li> <li>
-                Some thing
-            </li>d
+                    [domain] - [date crawl started] - [time crawl started]
+                </li> <li>
+                    [domain] - [date crawl started] - [time crawl started]
+                </li> <li>
+                    [domain] - [date crawl started] - [time crawl started]
+                </li> <li>
+                    [domain] - [date crawl started] - [time crawl started]
+                </li>
             </ul>
 
         </fieldset>
