--- a/ComputerNetworks/Ex04/www/index.html
+++ b/ComputerNetworks/Ex04/www/index.html
@@ -102,7 +102,7 @@
     <div class="content">
         <form action="crawlers" method="get">
             <label for="domain">Domain:</label>
-            <input type="text" id="domain" name="domain">
+            <input type="text" id="domain" name="domain" required pattern="https?://.+">
             &nbsp;
             <fieldset>
                 <legend style="text-align: left">Additional options</legend>
