--- a/ComputerNetworks/Ex04/www/index.html
+++ b/ComputerNetworks/Ex04/www/index.html
@@ -91,6 +91,12 @@
             -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
             background-color: rgba(250,250,250,0.8);
         }
+        .error{
+            text-align: center;
+            color: #DD4814;
+            font-size: 20px;
+            font-weight: 100;
+        }
     </style>
 </head>
 <body>
@@ -99,6 +105,7 @@
     <div class="header">
         <h2 class="main-title">Creepy Crawlers</h2>
     </div>
+    
     <div class="content">
         <form action="crawlers" method="get">
             <label for="domain">Domain:</label>
@@ -121,17 +128,7 @@
             <legend>Previously crawled</legend>
 
             <ul>
-                <li>
-                    [domain] - [date crawl started] - [time crawl started]
-                </li> <li>
-                    [domain] - [date crawl started] - [time crawl started]
-                </li> <li>
-                    [domain] - [date crawl started] - [time crawl started]
-                </li> <li>
-                    [domain] - [date crawl started] - [time crawl started]
-                </li> <li>
-                    [domain] - [date crawl started] - [time crawl started]
-                </li>
+                %CRAWLED_LIST_ITEMS_CONTAINER%
             </ul>
 
         </fieldset>
